--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -8,21 +8,26 @@
   
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="lt-blue-rect">
+    <div class="white-rect"> 
+        <img src="images/image-qr-code.png" alt="qr code">
+      <h1>Improve your front-end skills by building projects</h1> 
 
-  Improve your front-end skills by building projects
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
+</div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+ 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Faraja</a>.
   </div>
 </body>
 </html>
