--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -25,9 +25,9 @@
 </div>
 
  
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Faraja</a>.
-  </div>
+  </footer>
 </body>
 </html>
